# CryptoSwiftWrapper

./: .PrivacyInfo.xcprivacy  .gitignore  CMakeLists.txt  Package.resolved  Package.swift  README.md  build_script.sh
.github/workflows/: documentation.yml  tests.yml
Sources/CCrypto/: CCrypto-Bridging.h  CMakeLists.txt
Sources/CCrypto/include/: aes.h  blake2.h  sha256.h  sha3.h  sha512.h
Sources/CCrypto/libc/AES/: aes.c
Sources/CCrypto/libc/SHA/: sha256.c  sha3.c  sha512.c
Sources/CCrypto/libc/blake2/: blake2.c
Sources/CryptoSwiftWrapper/: CYCryptoFunctions.swift  CryptoSwiftWrapper.h  CryptoSwiftWrapper.swift  module.modulemap
Sources/CryptoSwiftWrapper/Documentation.docc/: CYErrors.md  Documentation.md  SHA_IMPL.md  UsageExample.md
Sources/CryptoSwiftWrapper/include/: cyfn.h  sha.h  sha256.h  sha512.h
Sources/_cyfn/: cyfn.h  cyfnBridging.h  module.modulemap  sha256.h  sha512.h
Tests/CryptoSwiftWrapperTests/: CryptoSwiftWrapperTests.swift
